feat : Button voir Détails Site LegendsBuster

--- a/projets.html
+++ b/projets.html
@@ -209,16 +209,20 @@
                             data-title="LegendsBuster"
                             data-category="Jeu Vidéo | Code Game Jam 2024"
                             data-description="LegendsBuster est un projet d'équipe passionnant, réalisé lors de la Code Game 2024. Ce jeu vidéo de type plateformer en 'die and retry' a été une opportunité unique de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. Nous avons dû concevoir les niveaux, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité. C'est une expérience qui a consolidé mes compétences en gestion de projet et en résolution de problèmes créative."
-                            data-tech="Unity, C#, Pixel Art, Plateformer"
+                            data-tech="Unity"
                             data-drive-link="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link"
-                            data-images="img/LegendsBuster.png,img/LegendsBuster_img2.png,img/LegendsBuster_img3.png">
+                            data-youtube-link="https://www.youtube.com/watch?v=Es5DpToufog"
+                            data-images="
+                            img/button_voir_details/LegendsBuster/legendsbuster3.png,
+                            img/button_voir_details/LegendsBuster/legendsbuster2.png,
+                            img/button_voir_details/LegendsBuster/legendsbuster1.png">
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
                 </div>
             </div>
             <div class="image-container">
-                <img src="img/LegendsBuster.png" alt="LegendsBuster">
+                <img src="img/button_voir_details/LegendsBuster/legendsbuster3.png" alt="LegendsBuster">
             </div>
         </div>
     </div>
