feat : correction faute orthographe

--- a/projets.html
+++ b/projets.html
@@ -60,11 +60,11 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Site E-Commerce de Parfums"
                             data-category="Développement Web | Projet Universitaire"
-                            data-description="Le site permet aux utilisateurs de naviguer à travers une sélection de parfums, de les ajouter à leur panier et de passer des commandes. Une interface pour les utilisateurs, ainsi que pour l'administrateur pour gérer les produits et les commandes. Le projet a été fais avec une structure MVC (Modèle-Vue-Contrôleur)"
+                            data-description="Le site permet aux utilisateurs de naviguer à travers une sélection de parfums, de les ajouter à leur panier et de passer des commandes. Une interface pour les utilisateurs, ainsi que pour l'administrateur pour gérer les produits et les commandes. Le projet a été fait avec une structure MVC (Modèle-Vue-Contrôleur)."
                             data-tech="PHP, MySQL, HTML, CSS"
                             data-apports="
-                            J'ai fais une grande partie du PHP, la gestion des utilisateurs, des produits et des ventes.
-                            J'ai également mis en place la base de données et la connexion a celle-ci."
+                            J'ai réalisé une grande partie du PHP, la gestion des utilisateurs, des produits et des ventes.
+                            J'ai également mis en place la base de données et sa connexion."
                             data-github-link="https://github.com/M2M2005/E-Commerce"
                             data-web-link="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php"
                             data-images="
@@ -130,8 +130,8 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Référendums Sécurisés"
                             data-category="Développement d'Application | Universitaire"
-                            data-description="Ce projet était axées sur la cryptographie nous devions sécurisé via Elgamal et aussi empecher le bourrage d'urne. Aussi on devait beaucoup communiquer avec un client, nous avons donc mis en place un système de gestion de projet agile. Durant ce projet nous devions rendre des sprint ce qui nous a permis de mieux gérer notre temps et de mieux communiquer avec le client."
-                            data-tech="Java, Cryptographie, Javafx"
+                            data-description="Ce projet était axé sur la cryptographie ; nous devions sécuriser les données via Elgamal et empêcher le bourrage d'urnes. Nous avons aussi beaucoup communiqué avec un client, ce qui nous a permis de mettre en place un système de gestion de projet agile. Durant ce projet, nous devions rendre des sprints, ce qui nous a permis de mieux gérer notre temps et de mieux communiquer avec le client."
+                            data-tech="Java, Cryptographie, JavaFX"
                             data-github-link="https://github.com/M2M2005/Referendum"
                             data-youtube-link="https://www.youtube.com/watch?v=F3I_4daMcuk"
                             data-images="img/button_voir_details/Referendum/referendum1.png,
@@ -140,9 +140,9 @@
                             img/button_voir_details/Referendum/referendum3.png,
                             img/button_voir_details/Referendum/referendum5.png"
                             data-apports="
-                            Connexion des application avec le serveur ||
-                            Implémentation des interface JavaFx ||
-                            Implémentation de test Automatique (Voir vidéo)"
+                            Connexion des applications avec le serveur ||
+                            Implémentation des interfaces JavaFX ||
+                            Implémentation de tests automatiques (Voir vidéo)"
                     >
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
@@ -170,7 +170,7 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Scoring pour Compétition d'Escalade"
                             data-category="Sheets & Dev Web | Projet Personnel"
-                            data-description="L'objectif principal était de calculer les points, puis les affichées sur une page web (En JS via des requette a l'API Google sheet et les imprimer au format pdf (Via Google Apps Script). Aussi dans le sxcel j'ai des bouton me permetant de créer des catégories automatique ou de update toutes les formule, ceci a aussi était fait avec Google Aps Script. Le projet est en cours de développement, mais il est déjà fonctionnel pour les compétitions."
+                            data-description="L'objectif principal était de calculer les points, puis de les afficher sur une page web (en JS via des requêtes à l'API Google Sheets) et de les imprimer au format PDF (via Google Apps Script). De plus, dans le fichier Excel, j'ai implémenté des boutons permettant de créer des catégories automatiques ou de mettre à jour toutes les formules, également réalisés avec Google Apps Script. Le projet est en cours de développement, mais il est déjà fonctionnel pour les compétitions."
                             data-tech="Sheets, Google Apps Script, API Google Sheets, JavaScript"
                             data-drive-link="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing"
                             data-github-link="https://github.com/M2M2005/Site-Web"
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="img/button_voir_details/Competition_Escalade/competition_Escalade2.png" alt="Exel">
+                <img src="img/button_voir_details/Competition_Escalade/competition_Escalade2.png" alt="Excel">
             </div>
         </div>
 
@@ -208,7 +208,7 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="LegendsBuster"
                             data-category="Jeu Vidéo | Code Game Jam 2024"
-                            data-description="LegendsBuster est un projet d'équipe passionnant, réalisé lors de la Code Game 2024. Ce jeu vidéo de type plateformer en 'die and retry' a été une opportunité unique de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. Nous avons dû concevoir les niveaux, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité. C'est une expérience qui a consolidé mes compétences en gestion de projet et en résolution de problèmes créative."
+                            data-description="LegendsBuster est un projet d'équipe passionnant, réalisé lors de la Code Game 2024. Ce jeu vidéo de type plateformer 'die and retry' a été une opportunité unique de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. Nous avons dû concevoir les niveaux, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité. C'est une expérience qui a consolidé mes compétences en gestion de projet et en résolution de problèmes créative."
                             data-tech="Unity"
                             data-drive-link="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link"
                             data-youtube-link="https://www.youtube.com/watch?v=Es5DpToufog"
@@ -239,8 +239,8 @@
                 <div class="modal-images-carousel">
                     <div class="modal-image-display" id="modalImageDisplay"></div>
                     <div class="carousel-nav" id="carouselNav"></div>
-                    <button class="carousel-arrow prev" id="prevImageBtn">&#10094;</button>
-                    <button class="carousel-arrow next" id="nextImageBtn">&#10095;</button>
+                    <button class="carousel-arrow prev" id="prevImageBtn">❮</button>
+                    <button class="carousel-arrow next" id="nextImageBtn">❯</button>
                 </div>
                 <h4>Technologies Utilisées</h4>
                 <p id="modalProjectTech"></p>
@@ -269,7 +269,7 @@
         </div>
         <div class="footer2">
             <div>
-                <h2>Tel</h2>
+                <h2>Tél.</h2>
                 <a href="tel:0768512006" target="_blank">07 68 51 20 06</a>
             </div>
             <div>
