feat : Modification image et % compétence

--- a/cv.html
+++ b/cv.html
@@ -177,20 +177,28 @@
                 <div class="d-flex justify-content-around">
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="skill-circle" data-percent="95">
+                            <div class="skill-circle" data-percent="100">
                                 <div class="skill-circle-inner">
-                                    <span class="skill-percent">95%</span>
+                                    <span class="skill-percent">100%</span>
                                 </div>
                             </div>
                             <h2 class="font-normal">HTML/CSS</h2>
                         </div>
                         <div class="competencecv">
-                            <div class="skill-circle" data-percent="25">
+                            <div class="skill-circle" data-percent="70">
                                 <div class="skill-circle-inner">
-                                    <span class="skill-percent">25%</span>
+                                    <span class="skill-percent">70%</span>
                                 </div>
                             </div>
                             <h2 class="font-normal">JS</h2>
+                        </div>
+                        <div class="competencecv">
+                            <div class="skill-circle" data-percent="45">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">45%</span>
+                                </div>
+                            </div>
+                            <h2 class="font-normal">Google Apps Script</h2>
                         </div>
                     </div>
                     <div class="competencecv2">
@@ -203,9 +211,9 @@
                             <h2 class="font-normal">Java / JavaFX</h2>
                         </div>
                         <div class="competencecv">
-                            <div class="skill-circle" data-percent="70">
+                            <div class="skill-circle" data-percent="75">
                                 <div class="skill-circle-inner">
-                                    <span class="skill-percent">70%</span>
+                                    <span class="skill-percent">75%</span>
                                 </div>
                             </div>
                             <h2 class="font-normal">PHP</h2>
@@ -213,9 +221,9 @@
                     </div>
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="skill-circle" data-percent="75">
+                            <div class="skill-circle" data-percent="90">
                                 <div class="skill-circle-inner">
-                                    <span class="skill-percent">75%</span>
+                                    <span class="skill-percent">90%</span>
                                 </div>
                             </div>
                             <h2 class="font-normal">SQL / PL SQL</h2>
