--- a/projets.html
+++ b/projets.html
@@ -103,7 +103,11 @@
                             data-tech="HTML, CSS, JS"
                             data-github-link="https://github.com/M2M2005/ProjetMediatheque"
                             data-web-link="https://m2m2005.github.io/ProjetMediatheque/src/mediatheque.html"
-                            data-images="img/button_voir_details/Projet_Mediatheque/projet_mediatheque1.png,img/button_voir_details/Projet_Mediatheque/projet_mediatheque2.png">
+                            data-images="
+                            img/button_voir_details/Projet_Mediatheque/projet_mediatheque1.png,
+                            img/button_voir_details/Projet_Mediatheque/projet_mediatheque2.png,
+                            img/button_voir_details/Projet_Mediatheque/projet_mediatheque3.png,
+                            img/button_voir_details/Projet_Mediatheque/projet_mediatheque4.png">
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
