feat : Liens Projet Médiathèque

--- a/projets.html
+++ b/projets.html
@@ -102,7 +102,7 @@
                             data-description="Le but de ce projet était d'apprendre le développement web en JavaScript réactif."
                             data-tech="HTML, CSS, JS"
                             data-github-link="https://github.com/M2M2005/ProjetMediatheque"
-                            data-web-link="https://m2m2005.github.io/ProjetMediatheque/src/mediatheque.html"
+                            data-web-link="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/ProjetMediatheque/src/mediatheque.html"
                             data-images="
                             img/button_voir_details/Projet_Mediatheque/projet_mediatheque1.png,
                             img/button_voir_details/Projet_Mediatheque/projet_mediatheque2.png,
