feat : modif text

--- a/cv.html
+++ b/cv.html
@@ -82,13 +82,14 @@
                 <p>
                     Durant mon stage au sein d'Orchestra - TravelSoft, éditeur d'une solution SaaS de mise en relation
                     entre Tour-Opérateurs et distributeurs (compagnies aériennes, hôtels, etc.), j'ai intégré l'équipe
-                    Assurance Qualité (QA) en tant que développeur QA.</p>
+                    Assurance Qualité (QA) en tant que développeur QA.
+                </p>
                 <p>
-                    Mon rôle principal consistait à concevoir et implémenter des tests automatisés en utilisant Selenium
-                    avec Java. L'objectif était de valider l'intégration de nouvelles compagnies partenaires au sein du
+                    Mon rôle consistait à concevoir et implémenter des tests automatisés en utilisant Selenium en Java.
+                    L'objectif était de valider l'intégration de nouvelles compagnies au sein du
                     logiciel de l'entreprise. Ce stage a été une opportunité précieuse pour renforcer mes compétences
-                    techniques et acquérir une expertise concrète en assurance qualité logicielle dans un environnement
-                    professionnel stimulant.</p>
+                    techniques et acquérir une expertise concrète en QA dans un environnement professionnel.
+                </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Stage Développeur QA - Orchestra TravelSoft"
