feat : modif text

--- a/cv.html
+++ b/cv.html
@@ -120,7 +120,6 @@
                 <h2>Étudiant en Informatique</h2>
                 <h2 class="font-normal">IUT Montpellier-Sète</h2>
                 <h2 class="font-normal">Montpellier, France</h2>
-                <h2 class="font-normal">En cours de formation</h2>
                 <br>
                 <div class="d-flex justify-content-center">
                     <img class="image-projet" src="img/iut-Montpellier-cete.jpeg" alt="IUT - Montpellier - Cète">
@@ -131,10 +130,10 @@
                     Étudiant à l'IUT Montpellier-Sète depuis 2023, je suis actuellement en deuxième année de BUT
                     Informatique.
                     Passionné par l'informatique et les nouvelles technologies, j'ai choisi cette formation pour
-                    acquérir des compétences solides en développement et en gestion des systèmes informatiques.
+                    acquérir des compétences solides en développement.
                 </p>
                 <p>
-                    J'ai opté pour l'option DACS afin de me spécialiser en cybersécurité et en programmation avancée.
+                    J'ai opté pour l'option DACS afin de me spécialiser en cybersécurité et en réseau avancée.
                 </p>
             </div>
         </div>
@@ -157,12 +156,7 @@
                     m'a permis d'acquérir des compétences techniques en ingénierie et en conception.
                 </p>
                 <p>
-                    Grâce à cette formation, j'ai travaillé sur divers projets en équipe, notamment dans les domaines de
-                    l'automatisation et de la conception technique, renforçant ainsi mes capacités d'analyse et de
-                    résolution de problèmes.
-                </p>
-                <p>
-                    J'y ai également découvert les bases de l'électronique, de la mécanique et de l'automatisation, qui
+                    Grâce à cette formation, j'ai découvert les bases de l'électronique, de la mécanique et du development, qui
                     ont contribué à mon intérêt pour l'informatique et l'innovation technologique.
                 </p>
             </div>
@@ -340,7 +334,6 @@
             <div class="sectioncv2">
                 <h3>2018 - Maintenant</h3>
                 <h2>Escalade</h2>
-                <p style="color: white">Niveau max : 7C</p>
                 <div class="d-flex justify-content-center">
                     <img class="image-projet" src="img/COBE-Logo.png" alt="Logo Club Escalade Bellegarde">
                 </div>
@@ -349,11 +342,15 @@
                 <p>
                     J'ai commencé l'escalade en 2018 au club de Bellegarde. Ce sport m'a permis de me dépasser et de me
                     surpasser.
+                </p>
+                <p>
                     J'ai eu l'opportunité de participer à des compétitions et à des événements liés à l'escalade, ce qui
                     m'a aidé à développer mon esprit d'équipe et mon sens de la compétition.
-                    Cette expérience m'a également permis de prendre conscience de mes responsabilités envers les
-                    autres.
                 </p>
+                <p>
+                    Ce sport m'a permis de prendre conscience de mes responsabilités envers les autres.
+                </p>
+                <p style="color: white">Niveau max : 7C</p>
             </div>
         </div>
     </div>
