feat : modif text

--- a/projets.html
+++ b/projets.html
@@ -54,7 +54,10 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données. Gestion des utilisateurs, des produits, des ventes et des paniers.
+                    Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données.
+                </p>
+                <p class="p-5-15">
+                    Gestion des utilisateurs, des produits, des ventes et des paniers.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
@@ -93,7 +96,10 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Dans le cadre de ce projet, j'ai développé un site web de médiathèque en utilisant JavaScript. Le site permet de gérer les emprunts de livres, les utilisateurs et les retours.
+                    Développement d'un site web pour la gestion d'une médiathèque en utilisant JavaScript.
+                </p>
+                <p class="p-5-15">
+                    Le site permet de gérer les emprunts de livres, les utilisateurs et les retours.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
@@ -134,7 +140,7 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Référendums Sécurisés"
                             data-category="Développement d'Application | Universitaire"
-                            data-description="Ce projet était axé sur la cryptographie ; nous devions sécuriser les données via Elgamal et empêcher le bourrage d'urnes. Nous avons aussi beaucoup communiqué avec un client, ce qui nous a permis de mettre en place un système de gestion de projet agile. Durant ce projet, nous devions rendre des sprints, ce qui nous a permis de mieux gérer notre temps et de mieux communiquer avec le client."
+                            data-description="Ce projet s'articulait autour de deux axes majeurs : la cryptographie et la méthode agile. || Nous avons sécuriser les référendums à l'aide de l'algorithme Elgamal. Parallèlement, afin d'assurer une bonne communication avec le client et de répondre au mieux à ses attentes, nous utilisions la méthode agile. Le projet était ainsi organisé en sprints de quatre semaines, et l'équipe se composait d'un Product Owner, d'un Scrum Master et de deux développeurs."
                             data-tech="Java, Cryptographie, JavaFX"
                             data-github-link="https://github.com/M2M2005/Referendum"
                             data-youtube-link="https://www.youtube.com/watch?v=F3I_4daMcuk"
@@ -163,18 +169,18 @@
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
-                        <h3>Excel Compétition Escalade</h3>
+                        <h3>Sheets Compétition Escalade</h3>
                         <h2 class="font-normal">Projet Personnel - Actuellement</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Ce projet combine Google Sheets, Google Apps Script et JavaScript pour gérer et afficher les scores d'une compétition d'escalade en temps réel.
+                    Ce projet a pour but de calculer et afficher les scores d'une compétition d'escalade en temps réel sur une page web.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Scoring pour Compétition d'Escalade"
                             data-category="Sheets & Dev Web | Projet Personnel"
-                            data-description="L'objectif principal était de calculer les points, puis de les afficher sur une page web (en JS via des requêtes à l'API Google Sheets) et de les imprimer au format PDF (via Google Apps Script). De plus, dans le fichier Excel, j'ai implémenté des boutons permettant de créer des catégories automatiques ou de mettre à jour toutes les formules, également réalisés avec Google Apps Script. Le projet est en cours de développement, mais il est déjà fonctionnel pour les compétitions."
+                            data-description="L'objectif principal était de calculer les points, puis de les afficher sur une page web (en JS via des requêtes à l'API Google Sheets). || De plus dans Sheets, j'ai implémenté des boutons permettant de créer des catégories automatiques, de mettre à jour toutes les formules et d'imprimer les résultats au format PDF, cela est réalisés avec Google Apps Script. Le projet est en cours de développement, mais il est déjà fonctionnel pour les compétitions."
                             data-tech="Sheets, Google Apps Script, API Google Sheets, JavaScript"
                             data-drive-link="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing"
                             data-github-link="https://github.com/M2M2005/Site-Web"
@@ -212,7 +218,7 @@
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="LegendsBuster"
                             data-category="Jeu Vidéo | Code Game Jam 2024"
-                            data-description="LegendsBuster est un projet d'équipe passionnant, réalisé lors de la Code Game 2024. Ce jeu vidéo de type plateformer 'die and retry' a été une opportunité unique de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. Nous avons dû concevoir les niveaux, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité. C'est une expérience qui a consolidé mes compétences en gestion de projet et en résolution de problèmes créative."
+                            data-description="Ce jeu vidéo a été une opportunité de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. || Nous avons dû tout concevoir à partir de zero, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité."
                             data-tech="Unity"
                             data-drive-link="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link"
                             data-youtube-link="https://www.youtube.com/watch?v=Es5DpToufog"
