feat : nouvelle adresse mail

--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -242,7 +242,7 @@
             </div>
             <div>
                 <h2>Email</h2>
-                <a href="mailto:pro.bons.cyprien@gmail.com" target="_blank">pro.bons.cyprien@gmail.com</a>
+                <a href="mailto:contact@cyprienbons.com" target="_blank">contact@cyprienbons.com</a>
             </div>
             <div>
                 <h2>En ligne</h2>
