--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <p>
-                    Actuellement étudiant en deuxième année de BUT Informatique, je suis à la recherche d’une alternance à partir de maintenant. J’aimerais mettre à profit mes compétences et mon expérience auprès d’une entreprise afin de contribuer activement à ses projets tout en poursuivant ma formation.
+                    Étudiant en troisième année de BUT Informatique en alternance, je poursuis ma formation chez ITESOFT en tant qu’assistant ingénieur QA.
                 </p>
             </div>
         </div>
