--- a/cv.html
+++ b/cv.html
@@ -67,6 +67,35 @@
         <div class="mt-50">
             <h1>Expérience</h1>
         </div>
+        <div class="section" id="stageITESOFT">
+            <div class="sectioncv2">
+                <h3>Septembre 2025 - Maintenant</h3>
+                <h2>Alternance - Assistant Ingénieur QA</h2>
+                <h2 class="font-normal">ITESOFT</h2>
+                <h2 class="font-normal">Aimargues, France</h2>
+                <div class="d-flex justify-content-center mt-20">
+                    <img class="image-projet" src="img/button_voir_details/ITESOFT/itesoft-logo.png" alt="Logo ITESOFT">
+                </div>
+            </div>
+            <div class="sectioncv3">
+                <p>
+                    Durant mon alternance chez ITESOFT, éditeur d'une solution de facturation, j'ai intégré l'équipe
+                    Assurance Qualité (QA) en tant qu'Assistant Ingénieur QA.
+                </p>
+                <div class="bonton-container">
+                    <button class="button button-primary button-size-sm open-project-modal"
+                            data-title="Alternance Assistant Ingénieur QA - ITESOFT"
+                            data-category="Expérience Professionnelle | Alternance"
+                            data-description="L'objectif de mon alternance est de contribuer à l'amélioration continue des processus de test et de qualité logicielle au sein de l'entreprise."
+                            data-tech="Java, Docker, Cypress, n8n, git"
+                    >
+                        <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img"
+                                  class="md hydrated" aria-label="information circle outline"></ion-icon>
+                        <span>Voir Détails</span>
+                    </button>
+                </div>
+            </div>
+        </div>
         <div class="section" id="stageOrchestra">
             <div class="sectioncv2">
                 <h3>Février 2025 - Mars 2025</h3>
