Clicker game projet

--- a/projets.html
+++ b/projets.html
@@ -163,7 +163,37 @@
                 <img src="img/button_voir_details/Referendum/referendum1.png" alt="Referendum">
             </div>
         </div>
-
+        <div class="section project-card" id="projetClickerGame">
+            <div class="sectionprojet1">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
+                        <h3>Clicker Game</h3>
+                        <h2 class="font-normal">Projet Personnel - Juillet 2025</h2>
+                    </div>
+                </div>
+                <p class="p-5-15">
+                    Développement d'un jeu de type "clicker" avec le framework Angular,
+                    où le joueur doit cliquer pour gagner des points et acheter des améliorations.
+                </p>
+                <div class="bonton-container">
+                    <button class="button button-primary button-size-sm open-project-modal"
+                            data-title="Clicker Game"
+                            data-category="Jeu Vidéo | Projet Personnel"
+                            data-description="Le jeu est développé en Angular, avec une interface utilisateur réactive et des animations pour rendre le jeu plus engageant. || Le joueur commence avec un simple clic pour gagner des points, mais peut rapidement acheter des améliorations pour automatiser le processus et augmenter ses gains. Le jeu inclut également des fonctionnalités de sauvegarde et de chargement pour permettre aux joueurs de continuer leur progression."
+                            data-tech="Angular, TypeScript, HTML, CSS"
+                            data-images="
+                            img/button_voir_details/clicker-game/clicker-game1.png,
+                            img/button_voir_details/clicker-game/clicker-game2.png">
+                        <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
+                        <span>Voir Détails</span>
+                    </button>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="img/button_voir_details/clicker-game/clicker-game2.png" alt="LegendsBuster">
+            </div>
+        </div>
         <div class="section project-card" id="projetExcel">
             <div class="sectionprojet1">
                 <div class="d-flex">
