link clicker game

--- a/projets.html
+++ b/projets.html
@@ -184,7 +184,10 @@
                             data-tech="Angular, TypeScript, HTML, CSS"
                             data-images="
                             img/button_voir_details/clicker-game/clicker-game1.png,
-                            img/button_voir_details/clicker-game/clicker-game2.png">
+                            img/button_voir_details/clicker-game/clicker-game2.png"
+                            data-web-link="https://clicker-game.cyprienbons.com/"
+                            data-github-link="https://github.com/M2M2005/Clicker-Game"
+                    >
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
                     </button>
