update date et cv

--- a/cv.html
+++ b/cv.html
@@ -156,7 +156,7 @@
             </div>
             <div class="sectioncv3">
                 <p>
-                    Étudiant à l'IUT Montpellier-Sète depuis 2023, je suis actuellement en deuxième année de BUT
+                    Étudiant à l'IUT Montpellier-Sète depuis 2023, je suis actuellement en troisième année de BUT
                     Informatique.
                     Passionné par l'informatique et les nouvelles technologies, j'ai choisi cette formation pour
                     acquérir des compétences solides en développement.
