--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <p>
-                    Étudiant en troisième année de BUT Informatique en alternance, je poursuis ma formation chez ITESOFT en tant qu’assistant ingénieur QA.
+                    Étudiant en troisième année de BUT Informatique en alternance chez ITESOFT en tant qu’assistant ingénieur QA.
                 </p>
             </div>
         </div>
