--- a/projets.html
+++ b/projets.html
@@ -142,7 +142,7 @@
                             data-category="Développement d'Application | Universitaire"
                             data-description="Ce projet s'articulait autour de deux axes majeurs : la cryptographie et la méthode agile. || Nous avons sécuriser les référendums à l'aide de l'algorithme Elgamal. Parallèlement, afin d'assurer une bonne communication avec le client et de répondre au mieux à ses attentes, nous utilisions la méthode agile. Le projet était ainsi organisé en sprints de quatre semaines, et l'équipe se composait d'un Product Owner, d'un Scrum Master et de deux développeurs."
                             data-tech="Java, Cryptographie, JavaFX"
-                            data-github-link="https://github.com/M2M2005/Referendum"
+                            data-github-link="https://github.com/killianrms/Referendum"
                             data-youtube-link="https://www.youtube.com/watch?v=F3I_4daMcuk"
                             data-images="img/button_voir_details/Referendum/referendum1.png,
                             img/button_voir_details/Referendum/referendum4.png,
