--- a/cv.html
+++ b/cv.html
@@ -55,6 +55,27 @@
             </a>
         </div>
 
+        <!-- Présentation Section -->
+        <section class="cv-section" id="presentation-section">
+            <div class="section-title">
+                <h1>Présentation</h1>
+            </div>
+
+            <div class="section">
+                <div class="sectioncv3" style="width: 100%;">
+                    <p>
+                        Je suis actuellement étudiant en BUT Informatique à l'IUT de Montpellier, en filière DACS (Réseau & CyberSécurité).
+                    </p>
+                    <p>
+                        Je suis en alternance chez ITESOFT en tant que développeur dans l'équipe QA (Quality Assurance). Mon rôle consiste à développer et améliorer les processus de tests automatisés, contribuant ainsi à l'amélioration continue de la qualité logicielle.
+                    </p>
+                    <p>
+                        J'ai pour objectif de me spécialiser dans le domaine de la QA. Je souhaite donc continuer mes études en école d'ingénieur ou en Master dans cet objectif, mais je n'ai pas encore défini la formation précise.
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <!-- Expérience Section with Timeline -->
         <section class="cv-section" id="experience-section">
             <div class="section-title">
