--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
                 <p>
-                    Étudiant en troisième année de BUT Informatique en alternance chez ITESOFT en tant qu’assistant ingénieur QA.
+                    Étudiant en troisième année de BUT Informatique parcours DACS (Réseau & CyberSécurité), actuellement en alternance chez ITESOFT en tant qu'Assistant Ingénieur QA.
                 </p>
             </div>
         </div>
