--- a/projets.html
+++ b/projets.html
@@ -54,20 +54,20 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données.
+                    Site e-commerce de vente de parfums développé en PHP avec architecture MVC et base de données MySQL.
                 </p>
                 <p class="p-5-15">
-                    Gestion des utilisateurs, des produits, des ventes et des paniers.
+                    Gestion complète des utilisateurs, produits, paniers et commandes avec interface administrateur.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Site E-Commerce de Parfums"
                             data-category="Développement Web | Projet Universitaire"
-                            data-description="Le site permet aux utilisateurs de naviguer à travers une sélection de parfums, de les ajouter à leur panier et de passer des commandes. Une interface pour les utilisateurs, ainsi que pour l'administrateur pour gérer les produits et les commandes. Le projet a été fait avec une structure MVC (Modèle-Vue-Contrôleur)."
+                            data-description="Site permettant aux utilisateurs de parcourir une sélection de parfums, les ajouter au panier et passer commande. || Interface utilisateur intuitive et panneau d'administration pour gérer produits et commandes. Architecture MVC (Modèle-Vue-Contrôleur)."
                             data-tech="PHP, MySQL, HTML, CSS"
                             data-apports="
-                            J'ai réalisé une grande partie du PHP, la gestion des utilisateurs, des produits et des ventes.
-                            J'ai également mis en place la base de données et sa connexion."
+                            Développement PHP (utilisateurs, produits, ventes) ||
+                            Conception et connexion à la base de données"
                             data-github-link="https://github.com/M2M2005/E-Commerce"
                             data-web-link="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php"
                             data-images="
@@ -96,16 +96,16 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Développement d'un site web pour la gestion d'une médiathèque en utilisant JavaScript.
+                    Application web de gestion de médiathèque développée en JavaScript réactif.
                 </p>
                 <p class="p-5-15">
-                    Le site permet de gérer les emprunts de livres, les utilisateurs et les retours.
+                    Gestion complète des emprunts, utilisateurs et retours de livres en temps réel.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Projet Médiathèque"
                             data-category="Développement Web | Projet Universitaire"
-                            data-description="Le but de ce projet était d'apprendre le développement web en JavaScript réactif."
+                            data-description="Application web pour gérer une médiathèque avec JavaScript réactif. || Système complet de gestion des emprunts, utilisateurs et retours de livres avec interface dynamique et mise à jour en temps réel."
                             data-tech="HTML, CSS, JS"
                             data-github-link="https://github.com/M2M2005/ProjetMediatheque"
                             data-web-link="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/ProjetMediatheque/src/mediatheque.html"
@@ -134,13 +134,13 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Le projet consiste à créer un système de référendums sécurisés, permettant à une entreprise de gérer des votes de manière cryptée et confidentielle.
+                    Système de référendums sécurisés permettant de gérer des votes cryptés et confidentiels avec l'algorithme Elgamal.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Référendums Sécurisés"
                             data-category="Développement d'Application | Universitaire"
-                            data-description="Ce projet s'articulait autour de deux axes majeurs : la cryptographie et la méthode agile. || Nous avons sécuriser les référendums à l'aide de l'algorithme Elgamal. Parallèlement, afin d'assurer une bonne communication avec le client et de répondre au mieux à ses attentes, nous utilisions la méthode agile. Le projet était ainsi organisé en sprints de quatre semaines, et l'équipe se composait d'un Product Owner, d'un Scrum Master et de deux développeurs."
+                            data-description="Projet combinant cryptographie et méthode agile. Sécurisation des votes avec l'algorithme Elgamal. || Développement en sprints de 4 semaines avec équipe composée d'un Product Owner, d'un Scrum Master et de deux développeurs. Communication client et adaptation continue des fonctionnalités."
                             data-tech="Java, Cryptographie, JavaFX"
                             data-github-link="https://github.com/killianrms/Referendum"
                             data-youtube-link="https://www.youtube.com/watch?v=F3I_4daMcuk"
@@ -173,14 +173,13 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Développement d'un jeu de type "clicker" avec le framework Angular,
-                    où le joueur doit cliquer pour gagner des points et acheter des améliorations.
+                    Jeu de type "clicker" développé avec Angular où le joueur gagne des points et achète des améliorations progressives.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Clicker Game"
                             data-category="Jeu Vidéo | Projet Personnel"
-                            data-description="Le jeu est développé en Angular, avec une interface utilisateur réactive et des animations pour rendre le jeu plus engageant. || Le joueur commence avec un simple clic pour gagner des points, mais peut rapidement acheter des améliorations pour automatiser le processus et augmenter ses gains. Le jeu inclut également des fonctionnalités de sauvegarde et de chargement pour permettre aux joueurs de continuer leur progression."
+                            data-description="Jeu développé en Angular avec interface réactive et animations immersives. || Le joueur clique pour gagner des points puis achète des améliorations pour automatiser et accélérer les gains. Système de sauvegarde/chargement pour conserver la progression."
                             data-tech="Angular, TypeScript, HTML, CSS"
                             data-images="
                             img/button_voir_details/clicker-game/clicker-game1.png,
@@ -207,13 +206,13 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    Ce projet a pour but de calculer et afficher les scores d'une compétition d'escalade en temps réel sur une page web.
+                    Système de calcul et affichage en temps réel des scores d'une compétition d'escalade sur page web.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Scoring pour Compétition d'Escalade"
                             data-category="Sheets & Dev Web | Projet Personnel"
-                            data-description="L'objectif principal était de calculer les points, puis de les afficher sur une page web (en JS via des requêtes à l'API Google Sheets). || De plus dans Sheets, j'ai implémenté des boutons permettant de créer des catégories automatiques, de mettre à jour toutes les formules et d'imprimer les résultats au format PDF, cela est réalisés avec Google Apps Script. Le projet est en cours de développement, mais il est déjà fonctionnel pour les compétitions."
+                            data-description="Calcul automatique des scores puis affichage temps réel sur page web via l'API Google Sheets (JavaScript). || Boutons automatisés dans Sheets (Google Apps Script) pour créer des catégories, mettre à jour les formules et exporter les résultats en PDF. Système fonctionnel et utilisé en production."
                             data-tech="Sheets, Google Apps Script, API Google Sheets, JavaScript"
                             data-drive-link="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing"
                             data-github-link="https://github.com/M2M2005/Site-Web"
@@ -244,14 +243,13 @@
                     </div>
                 </div>
                 <p class="p-5-15">
-                    LegendsBuster est un projet d'équipe réalisé lors de la Code Game 2024.
-                    Il s'agit d'un jeu vidéo de type plateformer "die and retry" qui nous a permis de découvrir Unity.
+                    Jeu vidéo de type plateformer "die and retry" développé en équipe lors de la Code Game Jam 2024 avec Unity.
                 </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="LegendsBuster"
                             data-category="Jeu Vidéo | Code Game Jam 2024"
-                            data-description="Ce jeu vidéo a été une opportunité de plonger dans l'univers d'Unity et d'apprendre les bases du développement de jeux. || Nous avons dû tout concevoir à partir de zero, les mécaniques de jeu, et travailler ensemble pour relever les défis techniques dans un temps limité."
+                            data-description="Première expérience avec Unity lors d'une game jam. Apprentissage des bases du développement de jeux vidéo. || Conception complète des mécaniques de jeu et travail d'équipe pour relever les défis techniques dans un temps limité."
                             data-tech="Unity"
                             data-drive-link="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link"
                             data-youtube-link="https://www.youtube.com/watch?v=Es5DpToufog"
